# test

./: .gitignore  README.md
Freelance/Space4U.in/space4u-backend/: .gitignore  INVOICE_TESTING_GUIDE.md  TEST_SUMMARY.md  fix_comprehensive_tests.py  manage.py  pyproject.toml
Freelance/Space4U.in/space4u-backend/.github/workflows/: ci.yml
Freelance/Space4U.in/space4u-backend/commerce/: admin.py  apps.py  currency_utils.py  middleware.py  models.py  serializers.py  services.py  test_security.py  tests.py  urls.py  views.py
Freelance/Space4U.in/space4u-backend/commerce/migrations/: 0001_initial.py  0002_initial.py  0003_alter_order_status.py  0004_order_payment_method_recentlyvieweditem_and_more.py  0005_remove_order_payment_method_and_more.py  0006_order_payment_method_recentlyvieweditem.py  0007_order_paid_at.py  0008_alter_order_status.py  0009_refund_config_and_order_refund.py  (+10 more)
Freelance/Space4U.in/space4u-backend/core/: admin_api.py  admin_metadata.py  generic_admin_api.py  test_openapi.py  tests.py  urls.py  views.py
Freelance/Space4U.in/space4u-backend/products/: admin.py  deal_utils.py  forms.py  models.py  serializers.py  test_comprehensive.py  tests.py  urls.py  views.py
Freelance/Space4U.in/space4u-backend/shipping/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
Freelance/Space4U.in/space4u-backend/space4u/: asgi.py  settings.py  urls.py  wsgi.py
Freelance/Space4U.in/space4u-backend/users/: adapters.py  admin.py  apps.py  google_auth.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
(+198 files in other folders)
